--- a/document.css
+++ b/document.css
@@ -1,13 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap);
 
 :root {
   /* Fonts */
-  --text-font-family: 'Atkinson Hyperelegible';
+  --text-font-family: 'Fira Sans', 'Atkinson Hyperelegible';
   --text-font-family-fallback: Roboto, -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: 'Atkinson Hyperelegible'
+  --header-font-family: 'Fira Sans', 'Atkinson Hyperelegible'
   --header-font-family-fallback: Georgia, serif;
   --code-font-family: 'Source Code Pro';
 
@@ -106,12 +107,12 @@
 
 /* Base-size for rem */
 html {
-  font-size: 10px;
+  font-size: 9px;
   line-height: 1.5rem;
 }
 
 body {
-  font-family: 'Atkinson Hyperelegible', var(--text-font-family-fallback), var(--text-font-base);
+  font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
   font-weight: normal;
   color: var(--text-color);
 }
@@ -125,16 +126,6 @@ h1, h2, h3 {
   padding: 2rem 3rem 1.5rem 3rem;
   width: 100%;
   height: 100%;
-}
-.remark-code, .remark-inline-code {
-  font-family: var(--code-font-family), Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
-}
-.remark-code {
-  font-size: 1rem;
-}
-.remark-inline-code {
-  font-size: var(--code-inline-font-size);
-  color: #000;
 }
 .remark-slide-number {
   color: var(--alice-500);
@@ -231,10 +222,10 @@ blockquote {
 
 /* Figure Caption */
 .caption {
-  font-size: 0.8888889em;
+  font-size: 0.75em;
+  font-style: italic;
   line-height: 1.5;
-  margin-top: 1em;
-  color: #6b7280;
+  color: var(--alice-400);
 }
 
 
@@ -386,6 +377,51 @@ a:hover {
   color: var(--alice-700);
 }
 
+/* Figures */
+.figure {
+  padding: 1.5rem 0rem;
+}
+
+/* Lists */
+ol, ul {
+  padding-left: 2rem;
+}
+li {
+    margin-top: 4px;
+}
+
+/* Code Chunks */
+.remark-code, .remark-inline-code {
+  font-family: var(--code-font-family), Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+}
+.remark-code {
+  font-size: 1rem;
+  display: block;
+  overflow-x: auto;
+  padding: 0.5rem 0.5rem !important;
+  background: var(--daisy-100) !important;
+  border-left: var(--daisy-400) solid 2px;
+}
+
+
+/* Remark code */
+
+.remark-inline-code {
+  font-size: var(--code-inline-font-size);
+  color: #000;
+  background: #F5F5F5; /* lighter */
+  border-radius: 0.125rem;
+  padding: 0.125rem 0.25rem;
+}
+.remark-code-line{
+  min-height: 0rem;
+}
+
+
+
+
+/* Xaringan tweeks */
+
 /* turns off slide numbers for title page: https://github.com/gnab/remark/issues/298 */
 .title-slide .remark-slide-number {
   display: none;
@@ -402,43 +438,25 @@ a:hover {
 .remark-code-line-highlighted {
   background-color: rgba(249, 39, 114, 0.5);
 }
-
-
-/* Xaringan tweeks */
 .inverse {
   background-color: var(--alice-800);
   text-shadow: 0 0 20px #333;
   /* text-shadow: none; */
 }
-
 .title-slide {
   background-color: #ffffff;
   border-top: 80px solid #ffffff;
 }
-
 .footnote {
   position: absolute;
   bottom: 1em;
   padding-right: 6em;
-  font-size: 0.75rem;
+  font-size: 1rem;
   color: #7f7f7f;
 }
 
-/* Lists */
-li {
-    margin-top: 4px;
-}
 
-/* Mono-spaced font */
-.mono-small {
-  font-family: monospace;
-  font-size: 1rem;
-}
-.remark-inline-code {
-  background: #F5F5F5; /* lighter */
-  border-radius: 0.125rem;
-  padding: 0.125rem 0.25rem;
-}
+
 
 
 
@@ -542,12 +560,16 @@ h1, h2, h3, h4 {
   padding: 0.25rem 0.5rem;
   display: inline-block;
 }
-h1, h2 {
+h1{
   margin: 1rem 0rem;
+}
+h2 {
+  margin: 0.75rem 0rem;
 }
 h3, h4 {
   margin: 0.5rem 0rem;
 }
 p {
-  margin: 0.125rem 0rem;
+  margin: 0.5rem 0rem;
+  line-height: 1.5rem;
 }
